third frontend commit - deallers view

--- a/Frontend/src/app/auth/auth.component.html
+++ b/Frontend/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="!isAuth">
-  <div *ngIf="authProb" style="color:red;float:right;">dealler doesn't exist. try again</div>
+  <div *ngIf="authProblem" style="color:red;float:right;">dealler doesn't exist. try again</div>
     <div class="input-group mb-3" style="width: 30%; float: right;margin-top: 0.5%;">
 
           <div class="input-group-prepend">
