--- a/Frontend/src/app/components/deallers/dealler-card/dealler-card.component.css
+++ b/Frontend/src/app/components/deallers/dealler-card/dealler-card.component.css
@@ -60,3 +60,10 @@ body {
 .stats span {
     font-size: 29px
 }
+
+.blueGradirnt3{
+    background: #00B4DB;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0083B0, #00B4DB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
