--- a/Frontend/src/app/components/deallers/dealler-card/dealler-card.component.html
+++ b/Frontend/src/app/components/deallers/dealler-card/dealler-card.component.html
@@ -3,7 +3,7 @@
         <div *ngFor="let d of deallers" class="card shadow" style="display:inline-block;margin: 1%;">
             <div class="upper"> <img src="assets/deallerAvatar/logoBackground.png" class="img-fluid"> </div>
             <div class="user text-center">
-                <div class="profile"> <img src="assets/deallerAvatar/{{d.name}}.png" class="rounded-circle" width="80"> </div>
+                <div class="profile"> <img src="assets/deallerAvatar/{{d.name}}.png" class="shadow rounded-circle" width="80"> </div>
             </div>
             <div class="mt-5 text-center">
                 <h4 class="mb-0">{{d.name}}</h4> <span class="text-muted d-block mb-2">{{d.id}}</span>
