--- a/Frontend/src/app/components/dealler/deals-view/deals-view.component.css
+++ b/Frontend/src/app/components/dealler/deals-view/deals-view.component.css
@@ -8,10 +8,6 @@ body{
     overflow: hidden
 }
 
-.pointer{
-    cursor: pointer;
-}
-
 .profile-header .profile-header-cover {
     background-image: url(https://bootdey.com/img/Content/bg1.jpg);
     background-size: cover;
@@ -32,6 +28,15 @@ body{
     right: 0;
     bottom: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .75) 100%)
+}
+
+.contentSize{
+    font-size: 120%;
+}
+
+.deallerListTitle{
+    margin-left: 29%;
+    font-size: 120%;
 }
 
 .profile-header .profile-header-content {
@@ -426,7 +431,7 @@ select.form-control:not([size]):not([multiple]) {
 .timeline:before {
     content: '';
     position: absolute;
-    top: 5px;
+    top: -5px;
     bottom: 5px;
     width: 5px;
     background: #2d353c;
