--- a/Frontend/src/app/components/deallers/deallers.component.html
+++ b/Frontend/src/app/components/deallers/deallers.component.html
@@ -1,11 +1,25 @@
-<app-dealler-card></app-dealler-card>
-
-<div >
-    <table class="center">
+    <div  class="groups row" style="justify-content: center;">
+        <div *ngFor="let d of deallers" class="card shadow" style="display:inline-block;margin: 1%;">
+            <div class="upper"> <img src="assets/deallerAvatar/logoBackground.png" class="img-fluid"> </div>
+            <div class="user text-center">
+                <div class="profile"> <img src="assets/deallerAvatar/{{d.name}}.png" class="shadow rounded-circle" width="80"> </div>
+            </div>
+            <div class="mt-5 text-center">
+                <h4 class="mb-0">{{d.name}}</h4> <span class="text-muted d-block mb-2">{{d.id}}</span>
+                 <button class="btn btn-primary btn-sm follow blueGradirnt3" >Follow</button>
+                <div class="d-flex justify-content-between align-items-center mt-4 px-4">
+                    <div class="stats">
+                        <h6 class="mb-0">Opening Worth</h6> <span>{{d.moneyAtOpening|RoundBigNumbers}}</span>
+                    </div>
+                    <div class="stats">
+                        <h6 class="mb-0">Current Worth</h6> <span>{{d.currMoney|RoundBigNumbers}}</span>
+                    </div>
+                    <div class="stats">
+                        <h6 class="mb-0">Owned Stocks</h6> <span>{{d.ownedStocksAmount}}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     
-        <tr *ngFor="let d of deallers">
-            
-        </tr>
-    </table>
+    </div>
     
-</div>
