--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -2,28 +2,28 @@
     <div *ngIf="!isAuth">
         <div class="input-group mb-3" style="width: 30%; float: right;margin-top: 0.5%;">
             <div class="input-group-prepend">
-                <button (click)="deallerLogin(deallerId.value)" class="button-67" >Dealler ID</button>
+                <button (click)="deallerLoginAsync(deallerId.value)" class="button-67" >Login</button>
             </div>
-            <input type="text" class="form-control" #deallerId >
+            <input type="text" placeholder="Enter Dealler ID..." class="form-control" #deallerId >
         </div>
     </div>
       
-    <div *ngIf="isAuth" style="float: right; margin-right: 5%">
-        <div class="input-group mb-3" style="width: 30%; float: right;margin-top: 0.5%;">
-            <div  class="input-group-prepend" style="float: right;">
+    <div *ngIf="isAuth" class="right" style=" margin-right: 5%">
+        <div class="input-group mb-3 right" style="width: 30%; margin-top: 0.5%;">
+            <div  class="input-group-prepend right">
         <br>
-            <button class="button-67 shadow" style="float: right;" (click)="Logout()" role="button">Logout</button>
+            <button class="button-67 shadow right" (click)="Logout()" role="button">Logout</button>
             </div>
         </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light"  >
-        <img routerLink="/" src='assets/stockmarket-logo.png' class=" shadow" width="15%" style="margin-right:2%;cursor: pointer;">
+        <img src='assets/stockmarket-logo.png' width="15%" style="margin-right:2%;cursor: pointer;">
         <div class="collapse navbar-collapse" id="navbarNav" >
             <ul class="navbar-nav" style="font-size: 120%; ">
                 <li style="background-color: white;" class="nav-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="/" class="nav-link" >Home</a></li>
                 <li class="nav-item"><a routerLinkActive="active" routerLink="/deallers" class="nav-link">deallers</a></li>
                 <li class="nav-item"><a routerLinkActive="active" routerLink="/dealler" class="nav-link" *ngIf="isAuth">
-                <img src="assets/deallerAvatar/{{deallerName}}.png" class="rounded-circle" width="23"> {{deallerName}}'s profile</a></li>
+                <span matBadge="0"><img src="assets/deallerAvatar/{{deallerName}}.png" class="rounded-circle" width="23"></span> {{deallerName}}'s profile</a></li>
             </ul>
         </div>
     </nav>
